--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <div id="quiz"></div>
 <button id="submit">Submit Quiz</button>
 <div id="results"></div>
+<script src="script.js"></script>
 </body>
 </html>
 
