--- a/index.html
+++ b/index.html
@@ -3,10 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Coding Quiz</title>
 </head>
 <body>
-    <div id="quiz"></div>
+<h1>Countdown Clock</h1>
+<div id="clockdiv">
+  <!-- <div>
+    <span class="days"></span>
+    <div class="smalltext">Days</div>
+  </div> -->
+  <!-- <div>
+    <span class="hours"></span>
+    <div class="smalltext">Hours</div>
+  </div> -->
+  <div>
+    <span class="minutes"></span>
+    <div class="smalltext">Minutes</div>
+  </div>
+  <div>
+    <span class="seconds"></span>
+    <div class="smalltext">Seconds</div>
+  </div>
+</div>
+    <h1>Quiz on Important Facts</h1>
+<div class="quiz-container">
+  <div id="quiz"></div>
+</div>
+<button id="previous">Previous Question</button>
+<button id="next">Next Question</button>
 <button id="submit">Submit Quiz</button>
 <div id="results"></div>
 <script src="script.js"></script>
