local storage for high score entries plus clear ability

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="smalltext">Seconds</div>
   </div>
 </div>
-    <h1>Quiz on Important Facts</h1>
+    <h1>Coding Quiz</h1>
 <div class="quiz-container">
   <div id="quiz"></div>
 </div>
@@ -34,7 +34,18 @@
 <button id="next">Next Question</button>
 <button id="submit">Submit Quiz</button>
 <div id="results"></div>
+<form>
+  <input id="item" type="text" placeholder="Enter High Score" required />
+</form>
+
+<h2>High Scores - Enter Your Score Here</h2>
+<ul></ul>
+
+<button id="clear">Clear High Scores</button>
 <script src="script.js"></script>
+<script src="scripts.js"></script>
+
+
 </body>
 </html>
 
